--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <!-- Importing React and ReactDOM CDN links-->
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js" defer></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" defer></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
     <!-- Imprting Javascript file-->
-    <script src="app1.js" defer></script>
+    <!-- <script src="app1.js" defer></script> -->
+    <script src="app2.js" defer type="text/babel"></script> 
     <title>React tutoriel</title>
 </head>
 
