Testing React components

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <!-- Imprting Javascript file-->
     <!-- <script src="app1.js" defer></script> -->
-    <script src="app2.js" defer type="text/babel"></script> 
+    <!-- <script src="app2.js" defer type="text/babel"></script>--> 
+    <script src="app3.js" defer type="text/babel"></script> 
     <title>React tutoriel</title>
 </head>
 
