--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <!-- Importing React and ReactDOM CDN links-->
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js" defer></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" defer></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script><!-- JavaScript Bundle with Popper -->
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 
     <!-- Imprting Javascript file-->
     <!-- <script src="app1.js" defer></script> -->
-    <!-- <script src="app2.js" defer type="text/babel"></script>--> 
+    <!-- <script src="app2.js" defer type="text/babel"></script>-->
     <!-- <script src="app3.js" defer type="text/babel"></script>  -->
-    <script src="app4.js" defer type="text/babel"></script> 
+    <!-- <script src="app4.js" defer type="text/babel"></script>  -->
+    <script src="app5.js" defer type="text/babel"></script>
     <title>React tutoriel</title>
 </head>
 
