--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- <script src="app3.js" defer type="text/babel"></script>  -->
     <!-- <script src="app4.js" defer type="text/babel"></script>  -->
     <!-- <script src="app5.js" defer type="text/babel"></script> -->
-    <script src="app6.js" defer type="text/babel"></script>
+    <!-- <script src="app6.js" defer type="text/babel"></script> -->
+    <script src="app7.js" defer type="text/babel"></script>
     <title>React tutoriel</title>
 </head>
 
