TP : Création table de filtrage de produits

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <!-- <script src="app4.js" defer type="text/babel"></script>  -->
     <!-- <script src="app5.js" defer type="text/babel"></script> -->
     <!-- <script src="app6.js" defer type="text/babel"></script> -->
-    <script src="app7.js" defer type="text/babel"></script>
+    <!-- <script src="app7.js" defer type="text/babel"></script> -->
+    <script src="app8.js" defer type="text/babel"></script>
     <title>React tutoriel</title>
 </head>
 
