--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!-- <script src="app6.js" defer type="text/babel"></script> -->
     <!-- <script src="app7.js" defer type="text/babel"></script> -->
     <!-- <script src="app8.js" defer type="text/babel"></script> -->
-    <script src="app9.js" defer type="text/babel"></script>
+    <!-- <script src="app9.js" defer type="text/babel"></script> -->
+    <script src="app10.js" defer type="text/babel"></script>
     <title>React tutoriel</title>
 </head>
 
